# pocBackEndApiOnprem

./: .dockerignore  .env.example  .gitignore  .pylintrc  CODING_STANDARDS.md  DEPLOY.md  Dockerfile  Makefile  README.md  USAGE_EXAMPLE.md  pyproject.toml  test
.github/workflows/: ci.yaml
docs/: LINTING_GUIDE.md  PRE_COMMIT_GUIDE.md  README.md
scripts/: README.md  dev-down.sh  dev-up.sh
src/api_onprem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/app/: main.py
src/app/api/v1/: routes.py
src/app/core/: config.py  logging.py  version.py
src/app/middleware/: request_id.py
src/app/models/: schemas.py
src/app/services/: csv_service.py  health_service.py  simulation_service.py  telemetry.py
src/app/utils/: time.py
tests/: test_health.py  test_orders.py  test_simulation.py
