[project]
name = "api-onprem"
version = "1.0.0"
description = "API on-prem demo (FastAPI) con estructura escalable y telemetría básica."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "ruff==0.6.8",
  "mypy==1.11.2",
  "httpx==0.27.2",
  "types-requests==2.32.0.20240914",
  "freezegun==1.5.1",
  "pylint==3.2.7",
]

[tool.pdm.scripts]
dev = "uvicorn src.app.main:app --reload --host 0.0.0.0 --port 8000"
lint = "ruff check src tests"
fmt = "ruff check --fix src tests"
test = "pytest -q --maxfail=1 --disable-warnings --cov=src --cov-report=term-missing"
typecheck = "mypy src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict_optional = true
ignore_missing_imports = true
